@@ -62,12 +62,12 @@ namespace Avogadro {
     private:
       RingSettingsWidget *m_settingsWidget;
       double m_alpha; // transparency of the VdW spheres
+      QVector<Color> m_ringColors;
 
       bool renderRing(const std::vector<int> &ring, PainterDevice *pd); // Render the given ring
 
     private Q_SLOTS:
       void settingsWidgetDestroyed();
-
 
       /**
        * @param value opacity of the rings
